Validation and retrieve list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,16 @@
 <div style="position:absolute;top:0;left:0;right:0;bottom:0;">
   <mat-sidenav-container #sidenav style="height:100%;width:100%;">
-    <mat-sidenav mode="side" #sidenav style="min-width:220px;">
+    <mat-sidenav mode="over" #sidenav style="min-width:220px;">
         <mat-list role="list">
             <mat-list-item role="listitem">
-              <a routerLink="" routerLinkActive="active">Nova lista</a>
+              <a routerLink="" routerLinkActive="active" (click)="sidenav.toggle()">
+                Nova lista
+              </a>
             </mat-list-item>
             <mat-list-item role="listitem">
-              <a routerLink="lists" routerLinkActive="active">Todas as listas</a>
+              <a routerLink="lists" routerLinkActive="active" (click)="sidenav.toggle()">
+                Todas as listas
+              </a>
             </mat-list-item>
           </mat-list>
     </mat-sidenav>
