--- a/src/app/components/new-list/new-list.component.html
+++ b/src/app/components/new-list/new-list.component.html
@@ -1,32 +1,46 @@
 <div class="align">
-<mat-card class="new-list-card">
-  <mat-card-header>
-      <mat-card-title><h2>Crie uma lista</h2></mat-card-title>
-  </mat-card-header>
+  <mat-card class="new-list-card">
+    <mat-card-header>
+      <mat-card-title>
+        <h2>Crie uma lista</h2>
+      </mat-card-title>
+    </mat-card-header>
 
-  <mat-card-content>
-    <form class="category-form">
-      <mat-list role="list">
-        <mat-list-item role="listitem">
-          <mat-form-field>
-            <input matInput placeholder="Nome da lista" [(ngModel)]="newList.name" name="listName" #listName="ngModel">
-          </mat-form-field>
-        </mat-list-item>
+    <mat-card-content>
 
-        <mat-list-item role="listitem">
-          <mat-form-field>
-            <mat-select placeholder="Categoria" [(ngModel)]="newList.typeId" name="listType" listType="ngModel">
-              <mat-option *ngFor="let category of categories" [value]="category.id">
-                {{ category.name }}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </mat-list-item>
+      <form class="category-form" [formGroup]="listForm">
+        <mat-list role="list">
 
-        <mat-list-item role="listitem">
-            <button mat-raised-button color="primary" (click)="saveList()">Enviar</button>
-        </mat-list-item>
-      </mat-list>
-    </form>
-  </mat-card-content>
-</mat-card>
+          <!-- List name form -->
+          <mat-list-item role="listitem">
+            <mat-form-field>
+              <input matInput placeholder="Nome da lista" [(ngModel)]="newList.name" name="listName" formControlName="listName" required>
+              <mat-error>
+                Por favor, preencha um nome
+              </mat-error>
+            </mat-form-field>
+          </mat-list-item>
+          <!-- List name form -->
+
+          <!-- List type form -->
+          <mat-list-item role="listitem">
+            <mat-form-field>
+              <mat-select placeholder="Categoria" [(ngModel)]="newList.typeId" name="listType" formControlName="listType" required>
+                <mat-option *ngFor="let category of categories" [value]="category.id">
+                  {{ category.name }}
+                </mat-option>
+              </mat-select>
+              <mat-error>
+                  Por favor, preencha um tipo
+              </mat-error>
+            </mat-form-field>
+          </mat-list-item>
+          <!-- List type form -->
+
+          <mat-list-item role="listitem">
+            <button [disabled]="listForm.invalid" mat-raised-button color="primary" (click)="saveList()">Enviar</button>
+          </mat-list-item>
+        </mat-list>
+      </form>
+    </mat-card-content>
+  </mat-card>
