Adding item management

--- a/src/app/components/all-lists/all-lists-table/all-lists-table.component.html
+++ b/src/app/components/all-lists/all-lists-table/all-lists-table.component.html
@@ -1,11 +1,12 @@
-<div class="all-list-table">
+<div *ngIf="hasLists" class="all-list-table">
   <table matSort (matSortChange)="sortData($event)">
     <tr>
       <th mat-sort-header="id">Id</th>
       <th mat-sort-header="typeName">Tipo</th>
       <th mat-sort-header="name">Nome da Lista</th>
       <th mat-sort-header="status">Status</th>
-      <th mat-header="name">Apagar lista</th>
+      <th mat-header="name">Detalhe</th>
+      <th mat-header="delete">Apagar lista</th>
     </tr>
 
     <tr *ngFor="let list of sortedData">
@@ -13,6 +14,7 @@
       <td>{{getTypeName(list.typeId)}}</td>
       <td>{{list.name}}</td>
       <td>{{list.status}}</td>
+      <td><button mat-button color="primary" (click)="listDetail(list.id)">Detalhe</button></td>
       <td><button mat-button color="warn" (click)="deleteList(list.id)">Deletar</button></td>
     </tr>
   </table>
