--- a/src/app/components/all-lists/all-lists.component.html
+++ b/src/app/components/all-lists/all-lists.component.html
@@ -1,7 +1,7 @@
 <div class="align">
   <mat-card class="all-lists-card">
     <mat-card-header>
-      <h2>Todas as listas</h2>
+      <h2>Todas as listas / Itens</h2>
     </mat-card-header>
 
     <mat-card-content>
