--- a/src/app/components/new-list/new-list.component.html
+++ b/src/app/components/new-list/new-list.component.html
@@ -8,7 +8,7 @@
 
     <mat-card-content>
 
-      <form class="category-form" [formGroup]="listForm">
+      <form class="list-form" [formGroup]="listForm">
         <mat-list role="list">
 
           <!-- List name form -->
