--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,13 @@
               </a>
             </mat-list-item>
             <mat-list-item role="listitem">
+                <a routerLink="new-item" routerLinkActive="active" (click)="sidenav.toggle()">
+                  Novo item
+                </a>
+              </mat-list-item>
+            <mat-list-item role="listitem">
               <a routerLink="lists" routerLinkActive="active" (click)="sidenav.toggle()">
-                Todas as listas
+                Todas as listas / Itens
               </a>
             </mat-list-item>
           </mat-list>
