--- a/src/app/components/new-item/new-item.component.scss
+++ b/src/app/components/new-item/new-item.component.scss
@@ -1,4 +1,4 @@
-.list-form {
+.item-form {
     max-width: 500px;
     width: 100%;
 }
@@ -9,5 +9,5 @@
 }
 
 .mat-list-item {
-  height: 12vh;
+  height: 15vh;
 }
